[tool.poetry]
name = "mr-m"
version = "0.1.0"
description = ""
authors = ["Natan Yellin"]
license = "MIT"

packages = [
    { include = "mrm"},
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
requests = "^2.26.0"
colorama = "^0.4.4"

[tool.poetry.scripts]
mr-m = "mrm.main:app"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
